app/assets/stylesheets/widgets.css.scss
/* ... */
//Author Info
.author-info {
	margin-bottom:$baseline;
	h6 {
		@include font-sans-serif($weight: bold);
		margin-bottom:10px;
		text-transform:none;
		a { color:$grayDark; }
	}
	img {
		float:left;
		margin-bottom:10px;
		margin-right:10px;
	}
	p {
		@include font-sans-serif(normal, 11px, 14px);
		&.brief-bio {
		}
	}
	ul {margin:0;}
	li {
		@include font-sans-serif(normal, 11px);
		list-style-type:none;
	}
}
// About Blog Widget
.blog-about {
	border-bottom:1px solid $grayLighter;
	h6 { color:$orangeDark; }
	p, ul {
		@include font-sans-serif(normal, 12px, 16px);
		margin-bottom:0;
	}
	.divider {
		background-position:200px top;
		margin-bottom:$baseline;
	}
}

.connect {
	.title {
		display: block;
		@include font-heading($size: 12px, $weight: 600, $lineHeight: 14px);
		margin-bottom:5px;
		text-transform: uppercase;
	}
	a {
		@include font-sans-serif($weight: normal, $size: 12px);
		margin-bottom:2px;
		padding-left: 18px;
	}
	margin-bottom: 10px;
	border-right: 1px solid $grayLighter;
	min-height: 100px;
}

.about {
	min-height: 100px;
	color: $gray;
	@include font-sans-serif($size: 12px, $lineHeight: 16px);
}

a.with-icon {
	margin-left: 4px;
	padding-top: 2px; /* cheat to push the text down a little */
	display: block;
	line-height: 16px;
	background-repeat: no-repeat;
	background-position: left 3px;
	color: lighten($black, 40%);
	&.twitter {
		background-image: url(image_path("icons/tiny-twitter.png"));
	}
	&.facebook {
		background-image: url(image_path("icons/tiny-facebook.png"));
	}
	&.podcast {
		background-image: url(image_path("icons/tiny-podcast.png"));
	}
	&.rss {
		background-image: url(image_path("icons/tiny-rss.png"));
	}
	&.archive {
		@include font-sans-serif($size: 12px, $weight: bold);
		background-image: url(image_path("icons/archived.png"));
		padding-left: 21px;
	}
	&:hover {
		text-decoration: underline;
	}
}


// Blog/Program Host Widget
#sidebar .host, .host {
	margin-bottom: 5px;
	@include font-sans-serif(normal, 12px, 16px);
	
	&:last-child { border-bottom: none; }
	.contentasset {
		max-width: 60px;
		float: left;
		margin: 5px 10px 5px 0;
	}
	h6.host-name {
		font-weight:bold;
		margin-bottom: 5px;
		text-transform:none;
		a { color:$grayDark; }
	}
}

// Multimedia Article Sidebar
.story-media {
	padding-top:$baseline / 2;
	figure.video {
		a {
			display:block;
			position:relative;
			span.play {
				background:transparent url(image_path('icons/video-play-btn-sm.png')) no-repeat 0 0;
				width:44px;
				height:29px;
				@include opacity(0.7);
				position:absolute;
				bottom:12px;
				left:6px;
			}
			&:hover span.play {
				@include opacity(1);
			}
		}
		img {
			max-width:100%;
		}
	}
	h5 {
		color:$orangeDark;
		font-size:12px;
		line-height:$baseline / 2;
		padding:($baseline / 8) 0;
		text-transform:uppercase;	
	}
	h4 {
		line-height: 18px;
		font-weight: 500;
		font-size: 15px;
		a {
			color:$grayDark;
		}
	}
}

.next-prev {
	@include font-headline($weight: normal);
	font-size: 14px;
	padding-bottom: 10px;
	a { color: $black; }
	
	.left {
		text-align: left;
		.arrow {
			margin-right: 10px;
			float: left;
		}
	}
	
	.right {
		text-align: right;
		.arrow {
			margin-left: 10px;
			float: right;
		}
	}
}

// Newsletter widget
.newsletter-subscribe {
	padding: 5px;
	form {
		input.email {
			padding-left: 30px;
			background: url(image_path("icons/envelope-open.png")) no-repeat 5px 2px;
			height: 15px;
			@include font-sans-serif($size: 10px);
			@include ie-inline-block;
		}
		
		input[type=submit] {
			@include font-shorthand($size: 10px, $weight: normal);
			@include ie-inline-block;
			padding: 2px 7px 1px 7px;
			margin: 0 0 0 7px;
		}
	}
}

.related-links {
	.small a {
		font-size: 11px;
		color: $linkColor;
		font-style: italic;
	}
}

.bottom {
	// background-color:$nearWhite;
	border-top:2px solid $grayLight;
	border-bottom:1px solid $grayLighter;
	padding:($baseline / 2) 0;
}

// PIJ Query
.pij-query {
	h6 {
		background: url(image_path('icons/pij-query.png')) no-repeat 0 4px;
		color:$grayDark;
		padding-left:30px;
		line-height: $baseLineHeight;
		small {
			@include font-sans-serif(normal, 11px);
			text-transform:none;
		}
	}
}

// Recent Videos
.recent-videos {
	ul {
		margin: 0;
		list-style: none;
		li { margin-bottom: 10px; }
	}
	
	p {
		margin-bottom:0;
		a {
			@include font-headline();
			@include font-shorthand(600, 15px);
			color:$nearBlack;
		}
	}
	span { @include font-sans-serif(normal, 11px); }
}

.missed-it-bucket {
	a {
		@include font-headline();
		@include font-shorthand(600, 15px);
		color:$nearBlack;
	}
	h4 { text-transform: none; }
}

.pager-nav {
	float: right;
	a {
		cursor: pointer;
		margin-top: 7px;
		background: url(image_path('icons/carousel-btns.png')) no-repeat;
		@include ie-inline-block;
		width:22px;
		height:22px;
		&.disabled { 
			@include opacity(0.5);
			cursor: default;
		}
		&.prev {
			background-position:0 0;
			&:hover { background-position:-62px 0; }
			&.disabled { background-position:0 0; }
		}
		&.next {
			background-position:-32px 0;
			&:hover { background-position:-94px 0; }
			&.disabled { background-position:-32px 0; }
		}
	}
}

// Content Carousel
.content-carousel {
	@include clearfix; 
	
	.carousel {
		min-height: 156px;
	}
	
	.carousel-item {
		.title {
			display: block;
			text-align: center;
			margin-bottom: 10px;
			line-height: 15px;
			a { 
				@include font-navigation($size: 14px);
				color: $nearBlack;
				line-height: 15px;
			}
		}
	}
}

//Comment Count Widget
a.comment-count.inline {
	background: url(image_path('icons/tiny-quotes.png')) no-repeat 2px 2px;
	padding-left: 18px;
	border: none;
}
/* ... */

